[package]
name = "hl-bootstrap"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["env", "derive"] }
duration-string = "0.5.2"
exec = "0.3.1"
eyre = "0.6.12"
reqwest = { version = "0.12.22", default-features = false, features = [
    "rustls-tls",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
structstruck = "0.5.1"
tokio = { version = "1.46.1", features = [
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
which = { version = "8.0.0", features = ["tracing"] }
